2006-09-06  Don Scorgie <DonScorgie@Blueyonder.co.uk>

	* data/labyrinth-??.png:
	* data/labyrinth.svg:
	* data/labyrinth.desktop.in:
	Add these vital files.  Labyrinth should now show up in the Applications->Office menu
	Complete with its own (very ugly) icon
	
	* data/Makefile.am:
	Update to install icons and desktop file

	* TextThought.py:
	* MMapArea.py:
	Move Thoughts.py to new file
	Update MMapArea to use the file

	* BaseThought.py:
	New file: Base class for thoughts
	
    * Thoughts.py:
    * MMapArea.py:
    Update to use BaseThought.  Rename Thought to TextThought
    
	* MMapArea.py:
	* Thoughts.py:
	Draw links behind thoughts to make thoughts feel more solid

	* MMapArea.py:
	Don't redraw on mouse motion when not watching
	Only redraw every 1/40th second to stop from hammering X server

2006-08-29  Don Scorgie  <DonScorgie@Blueyonder.co.uk>

	* Initial Import into new home on Google

What follows is the svn log dumped from the repo on my machine.  Don't judge it too harshly ;)
	
------------------------------------------------------------------------
r85 | don | 2006-08-28 16:16:00 +0100 (Mon, 28 Aug 2006) | 2 lines

Oops forgot to add in md5sums.

------------------------------------------------------------------------
r84 | don | 2006-08-28 16:01:54 +0100 (Mon, 28 Aug 2006) | 2 lines

Update web page a little.  Bump version up to 0.1.

------------------------------------------------------------------------
r83 | don | 2006-08-28 14:03:40 +0100 (Mon, 28 Aug 2006) | 2 lines

Add 2 new screenshots showing the browser and current map window

------------------------------------------------------------------------
r82 | don | 2006-08-28 12:47:41 +0100 (Mon, 28 Aug 2006) | 2 lines

Fix spelling mistake

------------------------------------------------------------------------
r81 | don | 2006-08-28 12:46:40 +0100 (Mon, 28 Aug 2006) | 2 lines

More README update

------------------------------------------------------------------------