@@ -1,5 +1,7 @@
-DATA_DIR = "@DATADIR@"
-LIB_DIR = "@LIBDIR@"
-VERSION = "@VERSION@"
-PACKAGE = "@PACKAGE@"
-PYTHONDIR = "@PYTHONDIR@"
+prefix = "@prefix@"
+DATA_DIR = "@datadir@"
+pkgdatadir = "@pkgdatadir@"
+LIB_DIR = "@libdir@"
+libexecdir = "@libexecdir@"
+PACKAGE="@PACKAGE@"
+VERSION="@VERSION@"
